fix problem login page invisible components

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -3452,6 +3452,7 @@ a.hiddenanchor {
   -ms-animation-name: fadeOutLeft;
   -o-animation-name: fadeOutLeft;
   animation-name: fadeOutLeft;
+  pointer-events: none;
 }
 .animate {
   -webkit-animation-duration: 0.5s;
